# libkolibre-xmlreader

./: Makefile.am  README  README.md  configure.ac  doxygen.cfg  doxygen.cfg.in  libkolibre-xmlreader.pc.in
src/: CacheObject.cpp  CacheObject.h  DataSource.cpp  DataSource.h  DataStreamHandler.cpp  DataStreamHandler.h  FileStream.cpp  FileStream.h  HttpStream.cpp  HttpStream.h  InputStream.h  Makefile.am  TidyStream.cpp  TidyStream.h  XmlAttributes.cpp  XmlAttributes.h  XmlDefaultHandler.cpp  XmlDefaultHandler.h  XmlError.h  XmlInputSource.h  XmlReader.cpp  XmlReader.h
tests/: Makefile.am  cachecheck.cpp  cachecheck.sh  fakehttpresponder.sh  httptester.sh  parsedoctype.cpp  parsedoctype.sh  parsetest.cpp  parsetest.sh  parsexmlbom.sh  setup_logging.h  urlextract.cpp
tests/testdata/: dtbook_2005_1_strict.xml  dtbook_2005_1_strict_interal.xml  html_4.0_strict.html  html_4.0_transitional_internal.html  ncc.html  nstest.xml  sample2_errors.xml  sample3.xml  utf8-bom.html  utf8-bom.xml  utf8-no-bom.html  utf8-no-bom.xml  xhtml_1.0_strict.html  xhtml_1.0_transitional_internal.html
